# mr_test

./: Cargo.toml
src/: main.rs  prime.rs
