[package]
name = "mr_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miller_rabin = "1.1.1"
rand = "0.8"
num-integer = "0.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
rayon = "1.9.0"
